--- a/options/options.html
+++ b/options/options.html
@@ -38,10 +38,12 @@
       <label>Show Feed Filter Chip Bar
         <input id="chipbar" type="checkbox" data-type="chipBar"/>
       </label>
+      <label>Show Channel Thumbnail
+        <input id="cthumb" type="checkbox" data-type="channelThumb"/>
+      </label>
       <label>Show Logo
         <input id="logo" type="checkbox" data-type="logo"/>
       </label>
-
       <p><i>Reload page to see results.</i></p>
     </section>
 
