--- a/options/options.html
+++ b/options/options.html
@@ -51,7 +51,7 @@
                 <input id="chipbar" type="checkbox" data-type="chipBar" />
             </label>
             <label
-                >Show Channel Thumbnail
+                >Show Channel Avatar
                 <input id="cthumb" type="checkbox" data-type="channelThumb" />
             </label>
             <label
