--- a/options/options.html
+++ b/options/options.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8" />
@@ -58,7 +57,10 @@
                 >Show Logo
                 <input id="logo" type="checkbox" data-type="logo" />
             </label>
-            <p><i>Reload page to see results.</i></p>
+            <br />
+            <button class="button-12" role="button" id="reload" reload>
+                Reload for full effect
+            </button>
         </section>
 
         <script src="options.js"></script>
