--- a/options/options.html
+++ b/options/options.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="toggle">
-                    Thumbnails
+                    Thumbnails (reload required)
                     <label class="switch switch200">
                         <input
                             id="thumbnails"
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="toggle">
-                    Channel Avatar
+                    Channel Avatar (reload required)
                     <label class="switch switch200">
                         <input
                             id="cthumb"
