--- a/options/options.html
+++ b/options/options.html
@@ -143,6 +143,14 @@
                 </div>
 
                 <div class="toggle">
+                    Chat
+                    <label class="switch switch200">
+                        <input id="chat" type="checkbox" data-type="chat" />
+                        <span class="slider"></span>
+                    </label>
+                </div>
+
+                <div class="toggle">
                     YouTube Logo
                     <label class="switch switch200">
                         <input id="logo" type="checkbox" data-type="logo" />
