--- a/options/options.html
+++ b/options/options.html
@@ -23,7 +23,7 @@
 
             <div id="popup">
                 <div class="toggle">
-                    Comments
+                    Video Comments
                     <label class="switch switch200">
                         <input
                             type="checkbox"
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="toggle">
-                    Thumbnails
+                    Video Thumbnails
                     <label class="switch switch200">
                         <input
                             id="thumbnails"
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="toggle">
-                    Video Sidebar
+                    In-video Sidebar
                     <label class="switch switch200">
                         <input
                             id="sidebar"
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="toggle">
-                    Preview
+                    Preview on hover
                     <label class="switch switch200">
                         <input
                             id="preview"
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="toggle">
-                    End screen: channel videos
+                    Video end recs: channel
                     <label class="switch switch200">
                         <input
                             id="nextvideos"
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="toggle">
-                    End screen: all videos
+                    Video end recs: all
                     <label class="switch switch200">
                         <input
                             id="endvideos"
@@ -143,7 +143,7 @@
                 </div>
 
                 <div class="toggle">
-                    Chat
+                    In-video Chat
                     <label class="switch switch200">
                         <input id="chat" type="checkbox" data-type="chat" />
                         <span class="slider"></span>
@@ -161,9 +161,6 @@
                 <br />
             </div>
             <div class="footer">
-                <button class="button-12" role="button" id="reload" reload>
-                    Reload for full effect
-                </button>
                 <img
                     id="icon"
                     class="icon ip"
