--- a/options/options.html
+++ b/options/options.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="toggle">
-                    Community posts
+                    Latest posts
                     <label class="switch switch200">
                         <input
                             id="communityPosts"
