--- a/options/options.html
+++ b/options/options.html
@@ -161,6 +161,7 @@
                 <br />
             </div>
             <div class="footer">
+                <p id="brand">inversepolarity</p>
                 <img
                     id="icon"
                     class="icon ip"
@@ -168,6 +169,7 @@
                     src="../icons/ip_seal.svg"
                     height="16"
                 />
+                <p id="version"></p>
             </div>
         </section>
 
