--- a/options/options.html
+++ b/options/options.html
@@ -33,7 +33,17 @@
                         <span class="slider"></span>
                     </label>
                 </div>
-
+                <div class="toggle">
+                    Video Likes
+                    <label class="switch switch200">
+                        <input
+                            type="checkbox"
+                            id="likes"
+                            data-type="likes"
+                        />
+                        <span class="slider"></span>
+                    </label>
+                </div>
                 <div class="toggle">
                     Video Thumbnails
                     <label class="switch switch200">
