--- a/options/options.html
+++ b/options/options.html
@@ -171,15 +171,20 @@
                 <br />
             </div>
             <div class="footer">
-                <p id="brand">inversepolarity</p>
-                <img
-                    id="icon"
-                    class="icon ip"
-                    alt="logo"
-                    src="../icons/ip_seal.svg"
-                    height="16"
-                />
-                <p id="version"></p>
+                <div class="footer_seal">
+                    <img
+                        id="icon"
+                        class="icon ip"
+                        alt="logo"
+                        src="../icons/ip_seal.jpeg"
+                        height="33"
+                    />
+                   
+                </div>
+                <div class="footer_label">
+                    <p id="brand">inversepolarity</p>
+                    <p id="version"></p>
+                </div>
             </div>
         </section>
 
