bugs and svg icon

--- a/options/options.html
+++ b/options/options.html
@@ -37,7 +37,7 @@
               id="icon"
               class="icon ip"
               alt="logo"
-              src="../icons/ip_seal.jpeg"
+              src="../icons/ip8.svg"
               height="33"
             />
           </div>
