inverted show/hide logic

--- a/options/options.html
+++ b/options/options.html
@@ -21,9 +21,9 @@
         <div class="custom-select">
           <select id="dropdown">
             <option value="0">Select Page</option>
-            <option value="1" selected>Home</option>
+            <option value="1" >Home</option>
             <option value="2">Video</option>
-            <option value="3">Everywhere</option>
+            <option value="3" selected>Everywhere</option>
           </select>
         </div>
 
