bug/ff - defaultSettings not loading on install

--- a/options/options.html
+++ b/options/options.html
@@ -48,6 +48,7 @@
         </div>
       </section>
     </div>
+    <script defer src="../defaultSettings.js"></script>
     <script defer src="options.js"></script>
     <script defer src="select.js"></script>
   </body>
