remember last open page

--- a/options/options.html
+++ b/options/options.html
@@ -21,9 +21,9 @@
         <div class="custom-select">
           <select id="dropdown">
             <option value="0">Select Page</option>
-            <option value="1" >Home</option>
+            <option value="1">Home</option>
             <option value="2">Video</option>
-            <option value="3" selected>Everywhere</option>
+            <option value="3">Everywhere</option>
           </select>
         </div>
 
@@ -49,7 +49,7 @@
       </section>
     </div>
     <script defer src="../defaultSettings.js"></script>
-    <script defer src="options.js"></script>
     <script defer src="select.js"></script>
+    <script defer src="options.js"></script>
   </body>
 </html>
