todo: test repopulatepopup

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <script type="application/javascript" src="../browser-polyfill.js"></script>
     <link rel="stylesheet" href="options.css" />
+    <title>Zentube</title>
   </head>
 
   <body>
@@ -30,7 +31,6 @@
         <div id="popup">
           <br />
         </div>
-
         <div class="footer">
           <div class="footer_seal">
             <img
