--- a/src/options/options.html
+++ b/src/options/options.html
@@ -39,7 +39,7 @@
         </div>
       </section>
     </div>
-    <script defer src="../defaultSettings.js"></script>
+    <script src="../defaultSettings.js"></script>
     <script defer src="select.js"></script>
     <script defer src="options.js"></script>
   </body>
