test issues fixed

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -34,7 +34,7 @@
         <div class="footer">
           <div class="footer_label">
             <p id="version"></p>
-            <p id="brand">inversepolarity</p>
+            <div id="brand">inversepolarity</div>
           </div>
         </div>
       </section>
