--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <script type="application/javascript" src="../browser-polyfill.js"></script>
     <link rel="stylesheet" href="options.css" />
-    <title>Zentube</title>
+    <title>
+      NIRT
+    </title>
   </head>
 
   <body>
@@ -33,8 +35,9 @@
         </div>
         <div class="footer">
           <div class="footer_label">
+            
             <p id="version"></p>
-            <div id="brand">inversepolarity</div>
+            <div id="brand">inverseplarity</div>
           </div>
         </div>
       </section>
