--- a/src/options/options.html
+++ b/src/options/options.html
@@ -37,7 +37,7 @@
           <div class="footer_label">
             
             <p id="version"></p>
-            <div id="brand">inverseplarity</div>
+            <div id="brand">inversepolarity</div>
           </div>
         </div>
       </section>
