chore: moving emoji to wasm

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -27,6 +27,7 @@
             <option value="1">Home</option>
             <option value="2">Video</option>
             <option value="3">Everywhere</option>
+            <option value="4">Special</option>
           </select>
         </div>
 
