--- a/src/options/options.html
+++ b/src/options/options.html
@@ -18,7 +18,7 @@
       <section class="clear-options data-types">
         <div class="logo">
           <img class="icon" alt="logo" src="../icons/logo2.png" height="16" />
-          <div class="title">ZenTube</div>
+          <div class="title">ZYT</div>
         </div>
 
         <div class="custom-select">
